feat: add elementary cellular automata
Add to table of content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <nav>
     <ol>
+        <li><a href="./elementary_cellular_automata">Elementary Cellular Automata</a></li>
         <li><a href="./fractal_trees">Fractal Trees</a></li>
     </ol>
 </nav>
