--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
     <ol>
         <li><a href="./elementary_cellular_automata">Elementary Cellular Automata</a></li>
         <li><a href="./fractal_trees">Fractal Trees</a></li>
+        <li><a href="./dtmf">DTMF</a></li>
     </ol>
 </nav>
