feat(turing machine): add to table of content

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
         <li><a href="./elementary_cellular_automata">Elementary Cellular Automata</a></li>
         <li><a href="./fractal_trees">Fractal Trees</a></li>
         <li><a href="./dtmf">DTMF</a></li>
+        <li><a href="./turing_machine">Turing Machine</a></li>
     </ol>
 </nav>
