feat(hilbert curve): add to table of content

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
         <li><a href="./fractal_trees">Fractal Trees</a></li>
         <li><a href="./dtmf">DTMF</a></li>
         <li><a href="./turing_machine">Turing Machine</a></li>
+        <li><a href="./hilbert">Hilbert Curve</a></li>
     </ol>
 </nav>
