chore: sync up with p5.js editor

--- a/index.html
+++ b/index.html
@@ -5,5 +5,14 @@
         <li><a href="./dtmf">DTMF</a></li>
         <li><a href="./turing_machine">Turing Machine</a></li>
         <li><a href="./hilbert">Hilbert Curve</a></li>
+        <li><a href="./ray_tracing">Ray Tracing</a></li>
+        <li><a href="./hydrogen_cloud">Hydrogen Cloud</a></li>
+        <li><a href="./poincare_disk">Poincare disk</a></li>
+        <li><a href="./reaction_diffusion">Reaction-diffusion</a></li>
+        <li><a href="./complex_function">Complex function</a></li>
+        <li><a href="./slit_experiment">Slit Experiment</a></li>
+        <li><a href="./brainf_ck">Brainf_ck</a></li>
+        <li><a href="./boids">Boids</a></li>
+        <li><a href="./spectral_graph">Spectral Graph</a></li>
     </ol>
 </nav>
