--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
-<nav>
-    <ol>
-        <li><a href="./elementary_cellular_automata">Elementary Cellular Automata</a></li>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    <nav>
+      <ol>
+        <li>
+          <a href="./elementary_cellular_automata"
+            >Elementary Cellular Automata</a
+          >
+        </li>
         <li><a href="./fractal_trees">Fractal Trees</a></li>
         <li><a href="./dtmf">DTMF</a></li>
         <li><a href="./turing_machine">Turing Machine</a></li>
@@ -14,5 +24,7 @@
         <li><a href="./brainf_ck">Brainf_ck</a></li>
         <li><a href="./boids">Boids</a></li>
         <li><a href="./spectral_graph">Spectral Graph</a></li>
-    </ol>
-</nav>
+      </ol>
+    </nav>
+  </body>
+</html>
