--- a/hydrogen_cloud/index.html
+++ b/hydrogen_cloud/index.html
@@ -3,12 +3,11 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/addons/p5.sound.min.js"></script>
-    <script src="https://unpkg.com/mathjs@9.4.1/lib/browser/math.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/mathjs@11.3.0/lib/browser/math.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/d3-color@3"></script>
     <script src="psi.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <meta charset="utf-8" />
-
   </head>
   <body>
     <script src="sketch.js"></script>
