feat: implement hydrogen pilot wave

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="./brainf_ck">Brainf_ck</a></li>
         <li><a href="./boids">Boids</a></li>
         <li><a href="./spectral_graph">Spectral Graph</a></li>
+        <li><a href="./hydrogen_pilot">Hydrogen Pilot Wave</a></li>
       </ol>
     </nav>
   </body>
