--- a/index.html
+++ b/index.html
@@ -39,53 +39,64 @@
       </svg>
     </label>
     <ul>
-      <li style="--color:lch(70% 75 0); --delay:0.225s;">
-        <a href="#elementary_cellular_automata">Elementary Cellular Automata</a>
+      <li style="--color:lch(50% 0 0); --delay:0.100s;">
+        <a href="/">Home</a>
       </li>
-      <li style="--color:lch(70% 75 24); --delay:0.258333s;">
-        <a href="#fractal_trees">Fractal Trees</a>
-      </li>
-      <li style="--color:lch(70% 75 48); --delay:0.291667s;">
-        <a href="#dtmf">DTMF</a>
-      </li>
-      <li style="--color:lch(70% 75 72); --delay:0.325s;">
-        <a href="#turing_machine">Turing Machine</a>
-      </li>
-      <li style="--color:lch(70% 75 96); --delay:0.358333s;">
-        <a href="#hilbert">Hilbert Curve</a>
-      </li>
-      <li style="--color:lch(70% 75 120); --delay:0.391667s;">
-        <a href="#ray_tracing">Ray Tracing</a>
-      </li>
-      <li style="--color:lch(70% 75 144); --delay:0.425s;">
-        <a href="#hydrogen_cloud">Hydrogen Cloud</a>
-      </li>
-      <li style="--color:lch(70% 75 168); --delay:0.458333s;">
-        <a href="#poincare_disk">Poincare disk</a>
-      </li>
-      <li style="--color:lch(70% 75 192); --delay:0.491667s;">
-        <a href="#reaction_diffusion">Reaction-diffusion</a>
-      </li>
-      <li style="--color:lch(70% 75 216); --delay:0.525s;">
-        <a href="#complex_function">Complex function</a>
-      </li>
-      <li style="--color:lch(70% 75 240); --delay:0.558333s;">
-        <a href="#slit_experiment">Slit Experiment</a>
-      </li>
-      <li style="--color:lch(70% 75 264); --delay:0.591667s;">
-        <a href="#brainf_ck">Brainf_ck</a>
-      </li>
-      <li style="--color:lch(70% 75 288); --delay:0.625s;">
-        <a href="#boids">Boids</a>
-      </li>
-      <li style="--color:lch(70% 75 312); --delay:0.658333s;">
-        <a href="#spectral_graph">Spectral Graph</a>
-      </li>
-      <li style="--color:lch(70% 75 336); --delay:0.691667s;">
-        <a href="#hydrogen_pilot">Hydrogen Pilot Wave</a>
+      <li style="--color:lch(50% 0 0); --delay:0.200s;">
+        <a href="#">Projects</a>
+        <ul>
+          <li style="--color:lch(70% 75 0); --delay:0.225s;">
+            <a href="#elementary_cellular_automata">Elementary Cellular Automata</a>
+          </li>
+          <li style="--color:lch(70% 75 24); --delay:0.258333s;">
+            <a href="#fractal_trees">Fractal Trees</a>
+          </li>
+          <li style="--color:lch(70% 75 48); --delay:0.291667s;">
+            <a href="#dtmf">DTMF</a>
+          </li>
+          <li style="--color:lch(70% 75 72); --delay:0.325s;">
+            <a href="#turing_machine">Turing Machine</a>
+          </li>
+          <li style="--color:lch(70% 75 96); --delay:0.358333s;">
+            <a href="#hilbert">Hilbert Curve</a>
+          </li>
+          <li style="--color:lch(70% 75 120); --delay:0.391667s;">
+            <a href="#ray_tracing">Ray Tracing</a>
+          </li>
+          <li style="--color:lch(70% 75 144); --delay:0.425s;">
+            <a href="#hydrogen_cloud">Hydrogen Cloud</a>
+          </li>
+          <li style="--color:lch(70% 75 168); --delay:0.458333s;">
+            <a href="#poincare_disk">Poincare disk</a>
+          </li>
+          <li style="--color:lch(70% 75 192); --delay:0.491667s;">
+            <a href="#reaction_diffusion">Reaction-diffusion</a>
+          </li>
+          <li style="--color:lch(70% 75 216); --delay:0.525s;">
+            <a href="#complex_function">Complex function</a>
+          </li>
+          <li style="--color:lch(70% 75 240); --delay:0.558333s;">
+            <a href="#slit_experiment">Slit Experiment</a>
+          </li>
+          <li style="--color:lch(70% 75 264); --delay:0.591667s;">
+            <a href="#brainf_ck">Brainf_ck</a>
+          </li>
+          <li style="--color:lch(70% 75 288); --delay:0.625s;">
+            <a href="#boids">Boids</a>
+          </li>
+          <li style="--color:lch(70% 75 312); --delay:0.658333s;">
+            <a href="#spectral_graph">Spectral Graph</a>
+          </li>
+          <li style="--color:lch(70% 75 336); --delay:0.691667s;">
+            <a href="#hydrogen_pilot">Hydrogen Pilot Wave</a>
+          </li>
+        </ul>
       </li>
     </ul>
   </nav>
+  <main>
+    Welcome
+  </main>
   <template>
     <link rel="stylesheet" type="text/css" href="static/css/project-preview.css">
     <article>
