--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       }
     }
   </script>
-  <link rel="stylesheet" type="text/css" href="static/css/style.css">
+  <link rel="stylesheet" type="text/css" href="static/css/style.css" />
   <script src="static/js/config.js"></script>
   <script src="static/js/router.js"></script>
   <script src="static/js/component.js"></script>
@@ -26,8 +26,8 @@
 
 <body>
   <nav>
-    <link rel="stylesheet" type="text/css" href="static/css/nav-menu.css">
-    <input id="menu_toggle" type="checkbox">
+    <link rel="stylesheet" type="text/css" href="static/css/nav-menu.css" />
+    <input id="menu_toggle" type="checkbox" />
     <label for="menu_toggle">
       <svg preserveAspectRatio="xMinYMin" viewBox="0 0 24 24">
         <path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"></path>
@@ -38,67 +38,103 @@
         </path>
       </svg>
     </label>
-    <ul>
-      <li style="--color:lch(50% 0 0); --delay:0.100s;">
+    <ul style="--delay: 0.1s">
+      <li style="--color: lch(70 0 0); --delay: 0.1s">
         <a href="/">Home</a>
+        <input id="submenu_toggle_home" class="submenu_toggle" type="checkbox" />
+        <label for="submenu_toggle_home"></label>
+        <div class="scroll">
+          <ul style="--delay: 0.1s">
+            <li style="--color: lch(100 100 0)">
+              <a>Hi</a>
+            </li>
+            <li style="--color: lch(100 100 30)">
+              <a>Hi</a>
+            </li>
+            <li style="--color: lch(100 100 60)">
+              <a>Hi</a>
+            </li>
+            <li style="--color: lch(100 100 90)">
+              <a>Hi</a>
+            </li>
+            <li style="--color: lch(100 100 120)">
+              <a>Hi</a>
+            </li>
+            <li style="--color: lch(100 100 150)">
+              <a>Hi</a>
+            </li>
+            <li style="--color: lch(100 100 180)">
+              <a>Hi</a>
+            </li>
+            <li style="--color: lch(100 100 210)">
+              <a>Hi</a>
+            </li>
+            <li style="--color: lch(100 100 240)">
+              <a>Hi</a>
+            </li>
+            <li style="--color: lch(100 100 270)">
+              <a>Hi</a>
+            </li>
+            <li style="--color: lch(100 100 300)">
+              <a>Hi</a>
+            </li>
+            <li style="--color: lch(100 100 330)">
+              <a>Hi</a>
+            </li>
+          </ul>
+        </div>
       </li>
-      <li style="--color:lch(50% 0 0); --delay:0.200s;">
-        <a href="#">Projects</a>
-        <ul>
-          <li style="--color:lch(70% 75 0); --delay:0.225s;">
-            <a href="#elementary_cellular_automata">Elementary Cellular Automata</a>
-          </li>
-          <li style="--color:lch(70% 75 24); --delay:0.258333s;">
-            <a href="#fractal_trees">Fractal Trees</a>
-          </li>
-          <li style="--color:lch(70% 75 48); --delay:0.291667s;">
-            <a href="#dtmf">DTMF</a>
-          </li>
-          <li style="--color:lch(70% 75 72); --delay:0.325s;">
-            <a href="#turing_machine">Turing Machine</a>
-          </li>
-          <li style="--color:lch(70% 75 96); --delay:0.358333s;">
-            <a href="#hilbert">Hilbert Curve</a>
-          </li>
-          <li style="--color:lch(70% 75 120); --delay:0.391667s;">
-            <a href="#ray_tracing">Ray Tracing</a>
-          </li>
-          <li style="--color:lch(70% 75 144); --delay:0.425s;">
-            <a href="#hydrogen_cloud">Hydrogen Cloud</a>
-          </li>
-          <li style="--color:lch(70% 75 168); --delay:0.458333s;">
-            <a href="#poincare_disk">Poincare disk</a>
-          </li>
-          <li style="--color:lch(70% 75 192); --delay:0.491667s;">
-            <a href="#reaction_diffusion">Reaction-diffusion</a>
-          </li>
-          <li style="--color:lch(70% 75 216); --delay:0.525s;">
-            <a href="#complex_function">Complex function</a>
-          </li>
-          <li style="--color:lch(70% 75 240); --delay:0.558333s;">
-            <a href="#slit_experiment">Slit Experiment</a>
-          </li>
-          <li style="--color:lch(70% 75 264); --delay:0.591667s;">
-            <a href="#brainf_ck">Brainf_ck</a>
-          </li>
-          <li style="--color:lch(70% 75 288); --delay:0.625s;">
-            <a href="#boids">Boids</a>
-          </li>
-          <li style="--color:lch(70% 75 312); --delay:0.658333s;">
-            <a href="#spectral_graph">Spectral Graph</a>
-          </li>
-          <li style="--color:lch(70% 75 336); --delay:0.691667s;">
-            <a href="#hydrogen_pilot">Hydrogen Pilot Wave</a>
-          </li>
-        </ul>
+      <li style="--color: lch(70 75 0); --delay: 0.225s">
+        <a href="#elementary_cellular_automata">Elementary Cellular Automata</a>
+      </li>
+      <li style="--color: lch(70 75 24); --delay: 0.258333s">
+        <a href="#fractal_trees">Fractal Trees</a>
+      </li>
+      <li style="--color: lch(70 75 48); --delay: 0.291667s">
+        <a href="#dtmf">DTMF</a>
+      </li>
+      <li style="--color: lch(70 75 72); --delay: 0.325s">
+        <a href="#turing_machine">Turing Machine</a>
+      </li>
+      <li style="--color: lch(70 75 96); --delay: 0.358333s">
+        <a href="#hilbert">Hilbert Curve</a>
+      </li>
+      <li style="--color: lch(70 75 120); --delay: 0.391667s">
+        <a href="#ray_tracing">Ray Tracing</a>
+      </li>
+      <li style="--color: lch(70 75 144); --delay: 0.425s">
+        <a href="#hydrogen_cloud">Hydrogen Cloud</a>
+      </li>
+      <li style="--color: lch(70 75 168); --delay: 0.458333s">
+        <a href="#poincare_disk">Poincare disk</a>
+      </li>
+      <li style="--color: lch(70 75 192); --delay: 0.491667s">
+        <a href="#reaction_diffusion">Reaction-diffusion</a>
+      </li>
+      <li style="--color: lch(70 75 216); --delay: 0.525s">
+        <a href="#complex_function">Complex function</a>
+      </li>
+      <li style="--color: lch(70 75 240); --delay: 0.558333s">
+        <a href="#slit_experiment">Slit Experiment</a>
+      </li>
+      <li style="--color: lch(70 75 264); --delay: 0.591667s">
+        <a href="#brainf_ck">Brainf_ck</a>
+      </li>
+      <li style="--color: lch(70 75 288); --delay: 0.625s">
+        <a href="#boids">Boids</a>
+      </li>
+      <li style="--color: lch(70 75 312); --delay: 0.658333s">
+        <a href="#spectral_graph">Spectral Graph</a>
+      </li>
+      <li style="--color: lch(70 75 336); --delay: 0.691667s">
+        <a href="#hydrogen_pilot">Hydrogen Pilot Wave</a>
       </li>
     </ul>
+    <script src="static/js/nav-menu.js"></script>
   </nav>
-  <main>
-    Welcome
-  </main>
+  <main></main>
   <template>
-    <link rel="stylesheet" type="text/css" href="static/css/project-preview.css">
+    <link rel="stylesheet" type="text/css" href="static/css/project-preview.css" />
     <article>
       <h1>
         <slot name="title"></slot>
