--- a/creative_coding/index.html
+++ b/creative_coding/index.html
@@ -18,7 +18,8 @@
     }
   </script>
   <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
-  <script src="static/js/main.js"></script>
+  <script src="/static/js/main.js"></script>
+  <script type="module" src="static/js/main.js"></script>
 </head>
 
 <body>
