--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Miniprojects</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" type="text/css" href="static/css/style.css" />
-  <script src="static/js/main.js"></script>
+  <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
+  <script src="/static/js/main.js"></script>
 </head>
 
 <body>
