--- a/creative_coding/index.html
+++ b/creative_coding/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Miniprojects</title>
+  <title>Creative Coding</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script type="importmap">
@@ -17,8 +17,7 @@
       }
     }
   </script>
-  <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
-  <script src="/static/js/main.js"></script>
+  <link rel="stylesheet" type="text/css" href="/static/css/global.css" />
   <script type="module" src="static/js/main.js"></script>
 </head>
 
