--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" class="light-mode">
+<html lang="en">
 
 <head>
 	<title>HanchaiN</title>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="supported-color-schemes" content="light dark">
+	<meta name="theme-color" content="#b36619" media="(prefers-color-scheme: light)">
+	<meta name="theme-color" content="#f2cca6" media="(prefers-color-scheme: dark)">
+	<link rel="manifest" href="/manifest.webmanifest">
 	<link rel="stylesheet" type="text/css" href="/static/css/style.css" />
 	<script type="importmap">
 		{
