--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
 		}
     </script>
 	<script type="module" src="/static/js/main.js"></script>
+	<script src="https://unpkg.com/htmx.org@1.9.2"
+		integrity="sha384-L6OqL9pRWyyFU3+/bjdSri+iIphTN/bvYyM37tICVyOJkWZLpP2vGn6VUEXgzg6h"
+		crossorigin="anonymous"></script>
+	<script src="https://unpkg.com/htmx.org/dist/ext/head-support.js"></script>
 </head>
 
-<body class="surface">
+<body class="surface" hx-ext="head-support">
 	<nav class="navbar">
 		<input id="menu_toggle" class="menu_toggle" type="checkbox" />
 		<label for="menu_toggle">
@@ -39,7 +43,7 @@
 		</label>
 		<div class="menu"></div>
 	</nav>
-	<main class="main"></main>
+	<main class="main" id="main-content"></main>
 </body>
 
 </html>
