--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 				"p5": "https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js",
 				"p5/sound": "https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js",
 				"three": "https://unpkg.com/three@0.150.1/build/three.module.js",
-				"three/addons/": "https://unpkg.com/three@0.150.1/examples/jsm/"
+				"three/addons/": "https://unpkg.com/three@0.150.1/examples/jsm/",
+				"gpu": "https://unpkg.com/gpu.js@latest/dist/gpu-browser.min.js"
 			}
 		}
     </script>
